# esp-network-config-ble

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml
components/network-config-ble/: CMakeLists.txt  README.md  idf_component.yml
components/network-config-ble/include/: esp-smartconfig-ble.h  network-config-ble-internal.h  network-config-ble.h
components/network-config-ble/src/: CMakeLists.txt  command_CHECK_MQTT.c  command_CHECK_WIFI.c  command_DEVICE_ID.c  command_ERASE.c  command_GET.c  command_LIST_SSID.c  command_OTA.c  command_OTA_BT.c  command_OTA_HTTPS.c  command_RESTART.c  command_SET.c  command_SET_WIFI.c  config.c  esp-smartconfig-ble-internal.h  main.c  mqtt_util.c  mqtt_util.h  tokenizer.c  tokenizer.h  wifi_util.c
example/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
example/components/esp-aws-iot/examples/subscribe_publish/main/: subscribe_publish_sample.c
example/components/esp-nimble-nordic-uart/src/: main.c
example/main/: CMakeLists.txt  example.c  hsv.c  hsv.h  idf_component.yml  main.c
iot-config/: package.json
iot-config/modules/ble-smartconfig/: package.json  tsconfig.json
iot-config/modules/ble-smartconfig/src/: ble-uart.ts  fsm.ts  index.ts
iot-config/src/: AWSConfigForm.tsx  App.tsx  ConnectDevice.tsx  PassphraseForm.tsx  SelectSSID.tsx  SendAWSConfig.tsx  WiFiConnect.tsx
jslib/: .babelrc.js  package-lock.json  package.json  rollup.config.js  serve.json  tsconfig.json
jslib/example/: app.jsx  index.html  loader.jsx  sw-transpiler.js
jslib/src/: ble-uart.ts  configure.ts  event-emitter.ts  fsm.ts  index.ts  wizard.ts
src/: CMakeLists.txt  aws_util.c  aws_util.h  command_CHECK_AWS.c  command_CHECK_MQTT.c  command_CHECK_WIFI.c  command_DEBUG.c  command_DEVICEID.c  command_DEVICE_ID.c  command_ERASE.c  command_GET.c  command_LIST_SSID.c  command_SET.c  command_SETWIFI.c  command_SET_WIFI.c  command_SSIDLIST.c  connect_aws.c  connect_aws.h  connect_wifi.c  connect_wifi.h  esp-smartconfig-ble-internal.h  esp-smartconfig-ble.h  main.c  mqtt_util.c  tokenizer.c  wifi_util.c  wifi_util.h
